{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 987,
  "lineage": "268bbac5-484c-b9a3-ad77-8e0a1e525133",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "newyork_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:495599735872:transit-gateway/tgw-041902de3c055a5c7",
            "association_default_route_table_id": "tgw-rtb-001a207836e2b9349",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway in New York (Spoke)",
            "dns_support": "enable",
            "id": "tgw-041902de3c055a5c7",
            "multicast_support": "disable",
            "owner_id": "495599735872",
            "propagation_default_route_table_id": "tgw-rtb-001a207836e2b9349",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "newyork-tgw"
            },
            "tags_all": {
              "Name": "newyork-tgw"
            },
            "vpn_ecmp_support": "enable"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tokyo_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:transit-gateway/tgw-097ce6a1ef0e73aaf",
            "association_default_route_table_id": "tgw-rtb-009941d595f8351f9",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway in Tokyo (Hub)",
            "dns_support": "enable",
            "id": "tgw-097ce6a1ef0e73aaf",
            "multicast_support": "disable",
            "owner_id": "495599735872",
            "propagation_default_route_table_id": "tgw-rtb-009941d595f8351f9",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "tokyo-tgw"
            },
            "tags_all": {
              "Name": "tokyo-tgw"
            },
            "vpn_ecmp_support": "enable"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment",
      "name": "newyork_to_tokyo_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-attach-0037510e82553693a",
            "peer_account_id": "495599735872",
            "peer_region": "ap-northeast-1",
            "peer_transit_gateway_id": "tgw-097ce6a1ef0e73aaf",
            "state": "pendingAcceptance",
            "tags": {
              "Name": "newyork-to-tokyo-peering"
            },
            "tags_all": {
              "Name": "newyork-to-tokyo-peering"
            },
            "transit_gateway_id": "tgw-041902de3c055a5c7"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_ec2_transit_gateway.tokyo_tgw"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment_accepter",
      "name": "tokyo_accepts_newyork_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-attach-0037510e82553693a",
            "peer_account_id": "495599735872",
            "peer_region": "us-east-1",
            "peer_transit_gateway_id": "tgw-041902de3c055a5c7",
            "tags": {
              "Name": "tokyo-accepts-newyork"
            },
            "tags_all": {
              "Name": "tokyo-accepts-newyork"
            },
            "transit_gateway_attachment_id": "tgw-attach-0037510e82553693a",
            "transit_gateway_id": "tgw-097ce6a1ef0e73aaf"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_ec2_transit_gateway_peering_attachment.newyork_to_tokyo_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "newyork_to_tokyo_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "172.18.0.0/16",
            "id": "tgw-rtb-09753ac26fc1e472e_172.18.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-0037510e82553693a",
            "transit_gateway_route_table_id": "tgw-rtb-09753ac26fc1e472e"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_ec2_transit_gateway_peering_attachment.newyork_to_tokyo_peering",
            "aws_ec2_transit_gateway_peering_attachment_accepter.tokyo_accepts_newyork_peering",
            "aws_ec2_transit_gateway_route_table.newyork_tgw_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "tokyo_to_newyork_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "172.19.0.0/16",
            "id": "tgw-rtb-099e8ed5dfb7b5075_172.19.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-0037510e82553693a",
            "transit_gateway_route_table_id": "tgw-rtb-099e8ed5dfb7b5075"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_ec2_transit_gateway_peering_attachment.newyork_to_tokyo_peering",
            "aws_ec2_transit_gateway_peering_attachment_accepter.tokyo_accepts_newyork_peering",
            "aws_ec2_transit_gateway_route_table.tokyo_tgw_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "newyork_tgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:transit-gateway-route-table/tgw-rtb-09753ac26fc1e472e",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-09753ac26fc1e472e",
            "tags": {
              "Name": "newyork-tgw-rt"
            },
            "tags_all": {
              "Name": "newyork-tgw-rt"
            },
            "transit_gateway_id": "tgw-041902de3c055a5c7"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tokyo_tgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:transit-gateway-route-table/tgw-rtb-099e8ed5dfb7b5075",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-099e8ed5dfb7b5075",
            "tags": {
              "Name": "tokyo-tgw-rt"
            },
            "tags_all": {
              "Name": "tokyo-tgw-rt"
            },
            "transit_gateway_id": "tgw-097ce6a1ef0e73aaf"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "newyork_tgw_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-09753ac26fc1e472e_tgw-attach-0e22c4c35787ddd73",
            "replace_existing_association": false,
            "resource_id": "vpc-043018aec8e4118bc",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0e22c4c35787ddd73",
            "transit_gateway_route_table_id": "tgw-rtb-09753ac26fc1e472e"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_ec2_transit_gateway_route_table.newyork_tgw_rt",
            "aws_ec2_transit_gateway_vpc_attachment.newyork_tgw_attachment",
            "aws_subnet.newyork-private-subnet-1a",
            "aws_subnet.newyork-private-subnet-1b",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tokyo_tgw_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-099e8ed5dfb7b5075_tgw-attach-08ab07bf474baa48c",
            "replace_existing_association": false,
            "resource_id": "vpc-09c8baf5464ff9898",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-08ab07bf474baa48c",
            "transit_gateway_route_table_id": "tgw-rtb-099e8ed5dfb7b5075"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_ec2_transit_gateway_route_table.tokyo_tgw_rt",
            "aws_ec2_transit_gateway_vpc_attachment.tokyo_tgw_attachment",
            "aws_subnet.tokyo-private-subnet-1a",
            "aws_subnet.tokyo-private-subnet-1d",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "newyork_tgw_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0e22c4c35787ddd73",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-005266d8e182a6207",
              "subnet-053cc63fe381e1bca"
            ],
            "tags": {
              "Name": "newyork-tgw-attachment"
            },
            "tags_all": {
              "Name": "newyork-tgw-attachment"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-041902de3c055a5c7",
            "vpc_id": "vpc-043018aec8e4118bc",
            "vpc_owner_id": "495599735872"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_subnet.newyork-private-subnet-1a",
            "aws_subnet.newyork-private-subnet-1b",
            "aws_vpc.newyork-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tokyo_tgw_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-08ab07bf474baa48c",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-00a42670d11042672",
              "subnet-0d5fe9adb140668bb"
            ],
            "tags": {
              "Name": "tokyo-tgw-attachment"
            },
            "tags_all": {
              "Name": "tokyo-tgw-attachment"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-097ce6a1ef0e73aaf",
            "vpc_id": "vpc-09c8baf5464ff9898",
            "vpc_owner_id": "495599735872"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_subnet.tokyo-private-subnet-1a",
            "aws_subnet.tokyo-private-subnet-1d",
            "aws_vpc.tokyo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "australia-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0850b33980de61cc6",
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:elastic-ip/eipalloc-0850b33980de61cc6",
            "domain": "vpc",
            "id": "eipalloc-0850b33980de61cc6",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-54-79-158-132.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.79.158.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "australia-nat"
            },
            "tags_all": {
              "Name": "australia-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "california-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd5b73aa27902415",
            "arn": "arn:aws:ec2:us-west-1:495599735872:elastic-ip/eipalloc-0cd5b73aa27902415",
            "domain": "vpc",
            "id": "eipalloc-0cd5b73aa27902415",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-177-74-30.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.74.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "california-nat"
            },
            "tags_all": {
              "Name": "california-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "hongkong-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092bada2c08bc8dd9",
            "arn": "arn:aws:ec2:ap-east-1:495599735872:elastic-ip/eipalloc-092bada2c08bc8dd9",
            "domain": "vpc",
            "id": "eipalloc-092bada2c08bc8dd9",
            "network_border_group": "ap-east-1",
            "public_dns": "ec2-43-199-192-226.ap-east-1.compute.amazonaws.com",
            "public_ip": "43.199.192.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hongkong-nat"
            },
            "tags_all": {
              "Name": "hongkong-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "london-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0674846489922131b",
            "arn": "arn:aws:ec2:eu-west-2:495599735872:elastic-ip/eipalloc-0674846489922131b",
            "domain": "vpc",
            "id": "eipalloc-0674846489922131b",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-51-24-43-180.eu-west-2.compute.amazonaws.com",
            "public_ip": "51.24.43.180",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "london-nat"
            },
            "tags_all": {
              "Name": "london-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "newyork-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0f4b2b9c022f67a",
            "arn": "arn:aws:ec2:us-east-1:495599735872:elastic-ip/eipalloc-0e0f4b2b9c022f67a",
            "domain": "vpc",
            "id": "eipalloc-0e0f4b2b9c022f67a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-218-101-222.compute-1.amazonaws.com",
            "public_ip": "3.218.101.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "newyork-nat"
            },
            "tags_all": {
              "Name": "newyork-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "saopaulo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0037b6d6f5b0653d4",
            "arn": "arn:aws:ec2:sa-east-1:495599735872:elastic-ip/eipalloc-0037b6d6f5b0653d4",
            "domain": "vpc",
            "id": "eipalloc-0037b6d6f5b0653d4",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-177-71-241-154.sa-east-1.compute.amazonaws.com",
            "public_ip": "177.71.241.154",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "saopaulo-nat"
            },
            "tags_all": {
              "Name": "saopaulo-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tokyo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fa09d26cf4a0fb0",
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:elastic-ip/eipalloc-08fa09d26cf4a0fb0",
            "domain": "vpc",
            "id": "eipalloc-08fa09d26cf4a0fb0",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-18-176-108-19.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.176.108.19",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tokyo-nat"
            },
            "tags_all": {
              "Name": "tokyo-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tokyotest-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ef45d5325681d5e",
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:elastic-ip/eipalloc-01ef45d5325681d5e",
            "domain": "vpc",
            "id": "eipalloc-01ef45d5325681d5e",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-13-114-69-96.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.114.69.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tokyotest-nat"
            },
            "tags_all": {
              "Name": "tokyotest-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "australia-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:internet-gateway/igw-00b08ecaf65acd920",
            "id": "igw-00b08ecaf65acd920",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Australia-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-077b1fc5de17d127f"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "california-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:internet-gateway/igw-0b7f1c432c38733f2",
            "id": "igw-0b7f1c432c38733f2",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Califonia-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-091d5396d623a34cb"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hongkong-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:internet-gateway/igw-0af0fcee53902acb3",
            "id": "igw-0af0fcee53902acb3",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Hongkong-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0fcd95b3b199a6881"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "london-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:internet-gateway/igw-081ddfa768f5f11a9",
            "id": "igw-081ddfa768f5f11a9",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-London-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-London-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-02c4bb68363a5ef8c"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "newyork-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:internet-gateway/igw-0a925def4cb3bea62",
            "id": "igw-0a925def4cb3bea62",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-New York-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-043018aec8e4118bc"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "saopaulo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:internet-gateway/igw-0bd5add686ef353a2",
            "id": "igw-0bd5add686ef353a2",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Saup-Paulo-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-02bbc0a1d95f3b24d"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tokyo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:internet-gateway/igw-086784023c82359f7",
            "id": "igw-086784023c82359f7",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Tokyo-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-09c8baf5464ff9898"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tokyotest-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:internet-gateway/igw-0106d885cd0b641b9",
            "id": "igw-0106d885cd0b641b9",
            "owner_id": "495599735872",
            "tags": {
              "Name": "TokyoTest_IG",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TokyoTest_IG",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0962912c1c97e3d2d"
          },
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "australia_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:495599735872:loadbalancer/app/australia-load-balancer/0c908b26b36499f6",
            "arn_suffix": "app/australia-load-balancer/0c908b26b36499f6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "australia-load-balancer-262987975.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:495599735872:loadbalancer/app/australia-load-balancer/0c908b26b36499f6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "australia-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03c9e4bc86f7b1833"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bcfd3310b2c6df89"
              },
              {
                "subnet_id": "subnet-0eadf406941c5ce96"
              }
            ],
            "subnets": [
              "subnet-0bcfd3310b2c6df89",
              "subnet-0eadf406941c5ce96"
            ],
            "tags": {
              "Name": "AustraliaLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "AustraliaLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-077b1fc5de17d127f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.australia-SG02-LB01",
            "aws_subnet.australia-public-subnet-2a",
            "aws_subnet.australia-public-subnet-2b",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "california_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:495599735872:loadbalancer/app/california-load-balancer/7b9432c4c66fd756",
            "arn_suffix": "app/california-load-balancer/7b9432c4c66fd756",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "california-load-balancer-2092907501.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:495599735872:loadbalancer/app/california-load-balancer/7b9432c4c66fd756",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "california-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-071a9e02f84295278"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-030718b576c868742"
              },
              {
                "subnet_id": "subnet-0be73428c9677c688"
              }
            ],
            "subnets": [
              "subnet-030718b576c868742",
              "subnet-0be73428c9677c688"
            ],
            "tags": {
              "Name": "CaliforniaLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "CaliforniaLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-091d5396d623a34cb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.california-SG02-LB01",
            "aws_subnet.california-public-subnet-1b",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "hongkong_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-east-1:495599735872:loadbalancer/app/hongkong-load-balancer/a6b88b4808d280f3",
            "arn_suffix": "app/hongkong-load-balancer/a6b88b4808d280f3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "hongkong-load-balancer-817863798.ap-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-east-1:495599735872:loadbalancer/app/hongkong-load-balancer/a6b88b4808d280f3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hongkong-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00f9caa995810019f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00ec8807a70fa9b45"
              },
              {
                "subnet_id": "subnet-0fc5b356ac5f0bb77"
              }
            ],
            "subnets": [
              "subnet-00ec8807a70fa9b45",
              "subnet-0fc5b356ac5f0bb77"
            ],
            "tags": {
              "Name": "HongKongLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "HongKongLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0fcd95b3b199a6881",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3DQVH9N71FHZ0"
          },
          "dependencies": [
            "aws_security_group.hongkong-SG02-LB01",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_subnet.hongkong-public-subnet-1b",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "london_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:495599735872:loadbalancer/app/london-load-balancer/361accbb3a31b478",
            "arn_suffix": "app/london-load-balancer/361accbb3a31b478",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "london-load-balancer-366636843.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:495599735872:loadbalancer/app/london-load-balancer/361accbb3a31b478",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "london-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0de31ecf93121cdad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0188e77a89b983b4e"
              },
              {
                "subnet_id": "subnet-0e80daa78bf7f2752"
              }
            ],
            "subnets": [
              "subnet-0188e77a89b983b4e",
              "subnet-0e80daa78bf7f2752"
            ],
            "tags": {
              "Name": "LondonLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "LondonLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-02c4bb68363a5ef8c",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.london-SG02-LB01",
            "aws_subnet.london-public-subnet-2a",
            "aws_subnet.london-public-subnet-2b",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "newyork_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:495599735872:loadbalancer/app/newyork-load-balancer/a105abdc7cd07452",
            "arn_suffix": "app/newyork-load-balancer/a105abdc7cd07452",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "newyork-load-balancer-2101426437.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:495599735872:loadbalancer/app/newyork-load-balancer/a105abdc7cd07452",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "newyork-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04688c1b87f228529"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-010fe3f45b0a0a29f"
              },
              {
                "subnet_id": "subnet-047ae008fdb591faf"
              }
            ],
            "subnets": [
              "subnet-010fe3f45b0a0a29f",
              "subnet-047ae008fdb591faf"
            ],
            "tags": {
              "Name": "NewYorkLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "NewYorkLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-043018aec8e4118bc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.newyork-SG02-LB01",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_subnet.newyork-public-subnet-1b",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "saopaulo_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:495599735872:loadbalancer/app/saopaulo-load-balancer/53b4f09621b7ada0",
            "arn_suffix": "app/saopaulo-load-balancer/53b4f09621b7ada0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "saopaulo-load-balancer-956394540.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:sa-east-1:495599735872:loadbalancer/app/saopaulo-load-balancer/53b4f09621b7ada0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "saopaulo-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d398289764445259"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07a7dd6a6528b9205"
              },
              {
                "subnet_id": "subnet-0b55cd8c609ad7066"
              }
            ],
            "subnets": [
              "subnet-07a7dd6a6528b9205",
              "subnet-0b55cd8c609ad7066"
            ],
            "tags": {
              "Name": "SaoPauloLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "SaoPauloLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-02bbc0a1d95f3b24d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "dependencies": [
            "aws_security_group.saopaulo-SG02-LB01",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_subnet.saopaulo-public-subnet-1c",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tokyo_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:495599735872:loadbalancer/app/tokyo-load-balancer/a992893d2ea8fc26",
            "arn_suffix": "app/tokyo-load-balancer/a992893d2ea8fc26",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tokyo-load-balancer-240959748.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:495599735872:loadbalancer/app/tokyo-load-balancer/a992893d2ea8fc26",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tokyo-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ef06fbe26e130c5a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04c8f18fb540bebbb"
              },
              {
                "subnet_id": "subnet-0c3f6b255010cca3a"
              }
            ],
            "subnets": [
              "subnet-04c8f18fb540bebbb",
              "subnet-0c3f6b255010cca3a"
            ],
            "tags": {
              "Name": "TokyoLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TokyoLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-09c8baf5464ff9898",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.tokyo-SG02-LB01",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_subnet.tokyo-public-subnet-1d",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "australia-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:495599735872:listener/app/australia-load-balancer/0c908b26b36499f6/18dbc354de9ca019",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:495599735872:targetgroup/australia-target-group/e0ae8c08ab7ca16b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:495599735872:listener/app/australia-load-balancer/0c908b26b36499f6/18dbc354de9ca019",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:495599735872:loadbalancer/app/australia-load-balancer/0c908b26b36499f6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.australia_alb",
            "aws_lb_target_group.australia_tg",
            "aws_security_group.australia-SG02-LB01",
            "aws_subnet.australia-public-subnet-2a",
            "aws_subnet.australia-public-subnet-2b",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "california-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:495599735872:listener/app/california-load-balancer/7b9432c4c66fd756/3d2d25993ad22cde",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:495599735872:targetgroup/california-target-group/9d51963ff4fa4ad4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:495599735872:listener/app/california-load-balancer/7b9432c4c66fd756/3d2d25993ad22cde",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:495599735872:loadbalancer/app/california-load-balancer/7b9432c4c66fd756",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.california_alb",
            "aws_lb_target_group.california_tg",
            "aws_security_group.california-SG02-LB01",
            "aws_subnet.california-public-subnet-1b",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hongkong-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-east-1:495599735872:listener/app/hongkong-load-balancer/a6b88b4808d280f3/2ee17a121a4f4440",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-east-1:495599735872:targetgroup/hongkong-target-group/db18464e05ac31b5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-east-1:495599735872:listener/app/hongkong-load-balancer/a6b88b4808d280f3/2ee17a121a4f4440",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-east-1:495599735872:loadbalancer/app/hongkong-load-balancer/a6b88b4808d280f3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.hongkong_alb",
            "aws_lb_target_group.hongkong_tg",
            "aws_security_group.hongkong-SG02-LB01",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_subnet.hongkong-public-subnet-1b",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "london-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:495599735872:listener/app/london-load-balancer/361accbb3a31b478/8d32704bb999ca51",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:495599735872:targetgroup/london-target-group/9be3e13bf893619f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:495599735872:listener/app/london-load-balancer/361accbb3a31b478/8d32704bb999ca51",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:495599735872:loadbalancer/app/london-load-balancer/361accbb3a31b478",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.london_alb",
            "aws_lb_target_group.london_tg",
            "aws_security_group.london-SG02-LB01",
            "aws_subnet.london-public-subnet-2a",
            "aws_subnet.london-public-subnet-2b",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "newyork-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:495599735872:listener/app/newyork-load-balancer/a105abdc7cd07452/7d87908611ec1593",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:495599735872:targetgroup/newyork-target-group/57ed6f165e298af7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:495599735872:listener/app/newyork-load-balancer/a105abdc7cd07452/7d87908611ec1593",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:495599735872:loadbalancer/app/newyork-load-balancer/a105abdc7cd07452",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.newyork_alb",
            "aws_lb_target_group.newyork_tg",
            "aws_security_group.newyork-SG02-LB01",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_subnet.newyork-public-subnet-1b",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "saopaulo-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:495599735872:listener/app/saopaulo-load-balancer/53b4f09621b7ada0/22632ca4d3b6e09f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:495599735872:targetgroup/saopaulo-target-group/4447bcf41497cdec",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:495599735872:listener/app/saopaulo-load-balancer/53b4f09621b7ada0/22632ca4d3b6e09f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:495599735872:loadbalancer/app/saopaulo-load-balancer/53b4f09621b7ada0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.saopaulo_alb",
            "aws_lb_target_group.saopaulo_tg",
            "aws_security_group.saopaulo-SG02-LB01",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_subnet.saopaulo-public-subnet-1c",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tokyo-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:495599735872:listener/app/tokyo-load-balancer/a992893d2ea8fc26/bb209a6b93255bab",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:495599735872:targetgroup/tokyo-target-group/c2afda0a843eb224",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:495599735872:listener/app/tokyo-load-balancer/a992893d2ea8fc26/bb209a6b93255bab",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:495599735872:loadbalancer/app/tokyo-load-balancer/a992893d2ea8fc26",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tokyo_alb",
            "aws_lb_target_group.tokyo_tg",
            "aws_security_group.tokyo-SG02-LB01",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_subnet.tokyo-public-subnet-1d",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "australia_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:495599735872:targetgroup/australia-target-group/e0ae8c08ab7ca16b",
            "arn_suffix": "targetgroup/australia-target-group/e0ae8c08ab7ca16b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:495599735872:targetgroup/australia-target-group/e0ae8c08ab7ca16b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "australia-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "AustraliaTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "AustraliaTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-077b1fc5de17d127f"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "california_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:495599735872:targetgroup/california-target-group/9d51963ff4fa4ad4",
            "arn_suffix": "targetgroup/california-target-group/9d51963ff4fa4ad4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:495599735872:targetgroup/california-target-group/9d51963ff4fa4ad4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "california-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "CaliforniaTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "CaliforniaTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-091d5396d623a34cb"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hongkong_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-east-1:495599735872:targetgroup/hongkong-target-group/db18464e05ac31b5",
            "arn_suffix": "targetgroup/hongkong-target-group/db18464e05ac31b5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-east-1:495599735872:targetgroup/hongkong-target-group/db18464e05ac31b5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hongkong-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "HongKongTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "HongKongTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fcd95b3b199a6881"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "london_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:495599735872:targetgroup/london-target-group/9be3e13bf893619f",
            "arn_suffix": "targetgroup/london-target-group/9be3e13bf893619f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:495599735872:targetgroup/london-target-group/9be3e13bf893619f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "london-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "LondonTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "LondonTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02c4bb68363a5ef8c"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "newyork_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:495599735872:targetgroup/newyork-target-group/57ed6f165e298af7",
            "arn_suffix": "targetgroup/newyork-target-group/57ed6f165e298af7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:495599735872:targetgroup/newyork-target-group/57ed6f165e298af7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "newyork-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "NewYorkTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "NewYorkTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-043018aec8e4118bc"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "saopaulo_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:495599735872:targetgroup/saopaulo-target-group/4447bcf41497cdec",
            "arn_suffix": "targetgroup/saopaulo-target-group/4447bcf41497cdec",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:495599735872:targetgroup/saopaulo-target-group/4447bcf41497cdec",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "saopaulo-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "SaoPauloTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "SaoPauloTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02bbc0a1d95f3b24d"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tokyo_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:495599735872:targetgroup/tokyo-target-group/c2afda0a843eb224",
            "arn_suffix": "targetgroup/tokyo-target-group/c2afda0a843eb224",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:495599735872:targetgroup/tokyo-target-group/c2afda0a843eb224",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tokyo-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "TokyoTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TokyoTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09c8baf5464ff9898"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tokyotesta_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:495599735872:targetgroup/tokyotesta-target-group/43b5439448fbc210",
            "arn_suffix": "targetgroup/tokyotesta-target-group/43b5439448fbc210",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:495599735872:targetgroup/tokyotesta-target-group/43b5439448fbc210",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tokyotesta-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "TokyoTestTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TokyoTestTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0962912c1c97e3d2d"
          },
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "australia-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0850b33980de61cc6",
            "association_id": "eipassoc-0fb5fe385718f6a49",
            "connectivity_type": "public",
            "id": "nat-0e6e9529058bd084b",
            "network_interface_id": "eni-0ba2bbad2eaf8739c",
            "private_ip": "172.22.1.148",
            "public_ip": "54.79.158.132",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eadf406941c5ce96",
            "tags": {
              "Name": "australia-nat"
            },
            "tags_all": {
              "Name": "australia-nat"
            }
          },
          "dependencies": [
            "aws_eip.australia-nat",
            "aws_internet_gateway.australia-igw",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "california-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd5b73aa27902415",
            "association_id": "eipassoc-04e8d6a24ea086c0a",
            "connectivity_type": "public",
            "id": "nat-0b318cc6b43f2b569",
            "network_interface_id": "eni-002c20d1a8a42ff69",
            "private_ip": "172.24.3.100",
            "public_ip": "54.177.74.30",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0be73428c9677c688",
            "tags": {
              "Name": "california-nat"
            },
            "tags_all": {
              "Name": "california-nat"
            }
          },
          "dependencies": [
            "aws_eip.california-nat",
            "aws_internet_gateway.california-igw",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "hongkong-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092bada2c08bc8dd9",
            "association_id": "eipassoc-0cc607315c08546cd",
            "connectivity_type": "public",
            "id": "nat-031b07bd5de3e5928",
            "network_interface_id": "eni-071e4620fe9ae18dc",
            "private_ip": "172.23.1.206",
            "public_ip": "43.199.192.226",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00ec8807a70fa9b45",
            "tags": {
              "Name": "hongkong-nat"
            },
            "tags_all": {
              "Name": "hongkong-nat"
            }
          },
          "dependencies": [
            "aws_eip.hongkong-nat",
            "aws_internet_gateway.hongkong-igw",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "london-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0674846489922131b",
            "association_id": "eipassoc-0df187919ff97e4f6",
            "connectivity_type": "public",
            "id": "nat-0c78b04419c2438f2",
            "network_interface_id": "eni-0ca5ccca9babafdd9",
            "private_ip": "172.20.1.158",
            "public_ip": "51.24.43.180",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0188e77a89b983b4e",
            "tags": {
              "Name": "london_nat"
            },
            "tags_all": {
              "Name": "london_nat"
            }
          },
          "dependencies": [
            "aws_eip.london-nat",
            "aws_internet_gateway.london-igw",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "newyork-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0f4b2b9c022f67a",
            "association_id": "eipassoc-0dee8906b21332990",
            "connectivity_type": "public",
            "id": "nat-018d1374a6dfcc805",
            "network_interface_id": "eni-0864dc9f5f400fcff",
            "private_ip": "172.19.1.55",
            "public_ip": "3.218.101.222",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-010fe3f45b0a0a29f",
            "tags": {
              "Name": "newyork-nat"
            },
            "tags_all": {
              "Name": "newyork-nat"
            }
          },
          "dependencies": [
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "saopaulo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0037b6d6f5b0653d4",
            "association_id": "eipassoc-06c1238d699b66495",
            "connectivity_type": "public",
            "id": "nat-0b0fa07214c20dbf3",
            "network_interface_id": "eni-05ae992e4a0d1fc4e",
            "private_ip": "172.21.1.175",
            "public_ip": "177.71.241.154",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b55cd8c609ad7066",
            "tags": {
              "Name": "saopaulo-nat"
            },
            "tags_all": {
              "Name": "saopaulo-nat"
            }
          },
          "dependencies": [
            "aws_eip.saopaulo-nat",
            "aws_internet_gateway.saopaulo-igw",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tokyo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fa09d26cf4a0fb0",
            "association_id": "eipassoc-06eda76284a81a29c",
            "connectivity_type": "public",
            "id": "nat-0bc7590a5b0b16369",
            "network_interface_id": "eni-0495491215539a14a",
            "private_ip": "172.18.1.193",
            "public_ip": "18.176.108.19",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c3f6b255010cca3a",
            "tags": {
              "Name": "tokyo-nat"
            },
            "tags_all": {
              "Name": "tokyo-nat"
            }
          },
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tokyotest-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ef45d5325681d5e",
            "association_id": "eipassoc-0da8917df12cb5a06",
            "connectivity_type": "public",
            "id": "nat-0d36147f06e2b4755",
            "network_interface_id": "eni-0344469c7e48a2dbd",
            "private_ip": "172.26.4.154",
            "public_ip": "13.114.69.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-017467ef137ddba0b",
            "tags": {
              "Name": "tokyotest-nat"
            },
            "tags_all": {
              "Name": "tokyotest-nat"
            }
          },
          "dependencies": [
            "aws_eip.tokyotest-nat",
            "aws_internet_gateway.tokyotest-igw",
            "aws_subnet.tokyotest-public-subnet-1d",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "newyork_vpc_to_tokyo_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.18.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-063d6788e3e2e19303557707546",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-063d6788e3e2e1930",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-041902de3c055a5c7",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_nat_gateway.newyork-nat",
            "aws_route_table.newyork-private",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "australia-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:route-table/rtb-06ec0cc33a318ced7",
            "id": "rtb-06ec0cc33a318ced7",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e6e9529058bd084b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Australia-private-rtb"
            },
            "tags_all": {
              "Name": "PROD-Australia-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-077b1fc5de17d127f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.australia-nat",
            "aws_internet_gateway.australia-igw",
            "aws_nat_gateway.australia-nat",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "australia-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:route-table/rtb-08eddd4b2a41f4332",
            "id": "rtb-08eddd4b2a41f4332",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00b08ecaf65acd920",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Australia-public-rtb"
            },
            "tags_all": {
              "Name": "PROD-Australia-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-077b1fc5de17d127f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.australia-igw",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "california-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:route-table/rtb-08889242f85f2edc4",
            "id": "rtb-08889242f85f2edc4",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b318cc6b43f2b569",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Califonia-private-rtb"
            },
            "tags_all": {
              "Name": "PROD-Califonia-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d5396d623a34cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.california-nat",
            "aws_internet_gateway.california-igw",
            "aws_nat_gateway.california-nat",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "california-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:route-table/rtb-088161e7f82d01e63",
            "id": "rtb-088161e7f82d01e63",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7f1c432c38733f2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Califonia-public-rtb"
            },
            "tags_all": {
              "Name": "PROD-Califonia-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d5396d623a34cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hongkong-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:route-table/rtb-0fa09b763fd7d260c",
            "id": "rtb-0fa09b763fd7d260c",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-031b07bd5de3e5928",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Hongkong-private-rtb"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcd95b3b199a6881"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.hongkong-nat",
            "aws_internet_gateway.hongkong-igw",
            "aws_nat_gateway.hongkong-nat",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hongkong-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:route-table/rtb-08e9fdbf59a82052a",
            "id": "rtb-08e9fdbf59a82052a",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af0fcee53902acb3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Hongkong-public-rtb"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcd95b3b199a6881"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hongkong-igw",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "london-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:route-table/rtb-0572684b131ed3edf",
            "id": "rtb-0572684b131ed3edf",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c78b04419c2438f2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-London-private-rtb"
            },
            "tags_all": {
              "Name": "PROD-London-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c4bb68363a5ef8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.london-nat",
            "aws_internet_gateway.london-igw",
            "aws_nat_gateway.london-nat",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "london-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:route-table/rtb-0b8f6c2162874be76",
            "id": "rtb-0b8f6c2162874be76",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-081ddfa768f5f11a9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-London-public-rtb"
            },
            "tags_all": {
              "Name": "PROD-London-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c4bb68363a5ef8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.london-igw",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "newyork-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:route-table/rtb-063d6788e3e2e1930",
            "id": "rtb-063d6788e3e2e1930",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-018d1374a6dfcc805",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-043018aec8e4118bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_nat_gateway.newyork-nat",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "newyork-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:route-table/rtb-0e3e341b2addb32fe",
            "id": "rtb-0e3e341b2addb32fe",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a925def4cb3bea62",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-043018aec8e4118bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.newyork-igw",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "saopaulo-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:route-table/rtb-02cc487fcc0dcebd9",
            "id": "rtb-02cc487fcc0dcebd9",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b0fa07214c20dbf3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Saup-Paulo-private-rtb"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bbc0a1d95f3b24d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.saopaulo-nat",
            "aws_internet_gateway.saopaulo-igw",
            "aws_nat_gateway.saopaulo-nat",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "saopaulo-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:route-table/rtb-012cbb169f633f209",
            "id": "rtb-012cbb169f633f209",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd5add686ef353a2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Saup-Paulo-public-rtb"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bbc0a1d95f3b24d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.saopaulo-igw",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyo-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:route-table/rtb-0d44ca093bb1b0e4f",
            "id": "rtb-0d44ca093bb1b0e4f",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bc7590a5b0b16369",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.19.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-097ce6a1ef0e73aaf",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Tokyo-private-rtb"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c8baf5464ff9898"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyo-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:route-table/rtb-05b1edb8c1f994dd2",
            "id": "rtb-05b1edb8c1f994dd2",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-086784023c82359f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.19.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-097ce6a1ef0e73aaf",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PROD-Tokyo-public-rtb"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c8baf5464ff9898"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_internet_gateway.tokyo-igw",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyotest-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:route-table/rtb-00467a4d27247bffc",
            "id": "rtb-00467a4d27247bffc",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d36147f06e2b4755",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TEST-Tokyo-private-rtb"
            },
            "tags_all": {
              "Name": "TEST-Tokyo-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0962912c1c97e3d2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tokyotest-nat",
            "aws_internet_gateway.tokyotest-igw",
            "aws_nat_gateway.tokyotest-nat",
            "aws_subnet.tokyotest-public-subnet-1d",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyotest-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:route-table/rtb-0763d69c5170a3c3a",
            "id": "rtb-0763d69c5170a3c3a",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0106d885cd0b641b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TEST-Tokyo-public-rtb"
            },
            "tags_all": {
              "Name": "TEST-Tokyo-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0962912c1c97e3d2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tokyotest-igw",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014aa55dc551948f1",
            "route_table_id": "rtb-06ec0cc33a318ced7",
            "subnet_id": "subnet-0de5be4adad623ae1"
          },
          "dependencies": [
            "aws_eip.australia-nat",
            "aws_internet_gateway.australia-igw",
            "aws_nat_gateway.australia-nat",
            "aws_route_table.australia-private",
            "aws_subnet.australia-private-subnet-2a",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014aa55dc551948f1",
            "route_table_id": "rtb-06ec0cc33a318ced7",
            "subnet_id": "subnet-0de5be4adad623ae1"
          },
          "dependencies": [
            "aws_eip.australia-nat",
            "aws_internet_gateway.australia-igw",
            "aws_nat_gateway.australia-nat",
            "aws_route_table.australia-private",
            "aws_subnet.australia-private-subnet-2a",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010f643b78096def8",
            "route_table_id": "rtb-08eddd4b2a41f4332",
            "subnet_id": "subnet-0eadf406941c5ce96"
          },
          "dependencies": [
            "aws_internet_gateway.australia-igw",
            "aws_route_table.australia-public",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bec737630d7d915",
            "route_table_id": "rtb-08eddd4b2a41f4332",
            "subnet_id": "subnet-0bcfd3310b2c6df89"
          },
          "dependencies": [
            "aws_internet_gateway.australia-igw",
            "aws_route_table.australia-public",
            "aws_subnet.australia-public-subnet-2b",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061da47bbc202b868",
            "route_table_id": "rtb-08889242f85f2edc4",
            "subnet_id": "subnet-0316ca7e59048141c"
          },
          "dependencies": [
            "aws_eip.california-nat",
            "aws_internet_gateway.california-igw",
            "aws_nat_gateway.california-nat",
            "aws_route_table.california-private",
            "aws_subnet.california-private-subnet-1b",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adb49aca910eabc8",
            "route_table_id": "rtb-08889242f85f2edc4",
            "subnet_id": "subnet-0fe5804992befec55"
          },
          "dependencies": [
            "aws_eip.california-nat",
            "aws_internet_gateway.california-igw",
            "aws_nat_gateway.california-nat",
            "aws_route_table.california-private",
            "aws_subnet.california-private-subnet-1c",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c009f894d3a8cc08",
            "route_table_id": "rtb-088161e7f82d01e63",
            "subnet_id": "subnet-030718b576c868742"
          },
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_route_table.california-public",
            "aws_subnet.california-public-subnet-1b",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c1aa3b609b93371",
            "route_table_id": "rtb-088161e7f82d01e63",
            "subnet_id": "subnet-0be73428c9677c688"
          },
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_route_table.california-public",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hong-kong-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04690128c1bf4bb9f",
            "route_table_id": "rtb-08e9fdbf59a82052a",
            "subnet_id": "subnet-0fc5b356ac5f0bb77"
          },
          "dependencies": [
            "aws_internet_gateway.hongkong-igw",
            "aws_route_table.hongkong-public",
            "aws_subnet.hongkong-public-subnet-1b",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hongkong-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdcf352369b6cf67",
            "route_table_id": "rtb-0fa09b763fd7d260c",
            "subnet_id": "subnet-003784450a3aaf615"
          },
          "dependencies": [
            "aws_eip.hongkong-nat",
            "aws_internet_gateway.hongkong-igw",
            "aws_nat_gateway.hongkong-nat",
            "aws_route_table.hongkong-private",
            "aws_subnet.hongkong-private-subnet-1a",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hongkong-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d06e1bcfe1857d9",
            "route_table_id": "rtb-0fa09b763fd7d260c",
            "subnet_id": "subnet-018ae7b26705e415a"
          },
          "dependencies": [
            "aws_eip.hongkong-nat",
            "aws_internet_gateway.hongkong-igw",
            "aws_nat_gateway.hongkong-nat",
            "aws_route_table.hongkong-private",
            "aws_subnet.hongkong-private-subnet-1b",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hongkong-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd8173d34df5173b",
            "route_table_id": "rtb-08e9fdbf59a82052a",
            "subnet_id": "subnet-00ec8807a70fa9b45"
          },
          "dependencies": [
            "aws_internet_gateway.hongkong-igw",
            "aws_route_table.hongkong-public",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dbea19d510b7384",
            "route_table_id": "rtb-0572684b131ed3edf",
            "subnet_id": "subnet-0091e4a2e01588c37"
          },
          "dependencies": [
            "aws_eip.london-nat",
            "aws_internet_gateway.london-igw",
            "aws_nat_gateway.london-nat",
            "aws_route_table.london-private",
            "aws_subnet.london-private-subnet-2a",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd05e1056d5cd1cb",
            "route_table_id": "rtb-0572684b131ed3edf",
            "subnet_id": "subnet-0ad1234bf5dd72289"
          },
          "dependencies": [
            "aws_eip.london-nat",
            "aws_internet_gateway.london-igw",
            "aws_nat_gateway.london-nat",
            "aws_route_table.london-private",
            "aws_subnet.london-private-subnet-2b",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a4fe016e5ff362d",
            "route_table_id": "rtb-0b8f6c2162874be76",
            "subnet_id": "subnet-0188e77a89b983b4e"
          },
          "dependencies": [
            "aws_internet_gateway.london-igw",
            "aws_route_table.london-public",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e87d1f92302839e",
            "route_table_id": "rtb-0b8f6c2162874be76",
            "subnet_id": "subnet-0e80daa78bf7f2752"
          },
          "dependencies": [
            "aws_internet_gateway.london-igw",
            "aws_route_table.london-public",
            "aws_subnet.london-public-subnet-2b",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "newyork-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0696ec9c5139403d3",
            "route_table_id": "rtb-063d6788e3e2e1930",
            "subnet_id": "subnet-005266d8e182a6207"
          },
          "dependencies": [
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_nat_gateway.newyork-nat",
            "aws_route_table.newyork-private",
            "aws_subnet.newyork-private-subnet-1a",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "newyork-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b32fbd613a8317dc",
            "route_table_id": "rtb-063d6788e3e2e1930",
            "subnet_id": "subnet-053cc63fe381e1bca"
          },
          "dependencies": [
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_nat_gateway.newyork-nat",
            "aws_route_table.newyork-private",
            "aws_subnet.newyork-private-subnet-1b",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "newyork-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fac71c20c9c1b8cf",
            "route_table_id": "rtb-0e3e341b2addb32fe",
            "subnet_id": "subnet-010fe3f45b0a0a29f"
          },
          "dependencies": [
            "aws_internet_gateway.newyork-igw",
            "aws_route_table.newyork-public",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "newyork-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d589034f8cb57cfc",
            "route_table_id": "rtb-0e3e341b2addb32fe",
            "subnet_id": "subnet-047ae008fdb591faf"
          },
          "dependencies": [
            "aws_internet_gateway.newyork-igw",
            "aws_route_table.newyork-public",
            "aws_subnet.newyork-public-subnet-1b",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sao-paulo-public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03964d3eda8e4150d",
            "route_table_id": "rtb-012cbb169f633f209",
            "subnet_id": "subnet-07a7dd6a6528b9205"
          },
          "dependencies": [
            "aws_internet_gateway.saopaulo-igw",
            "aws_route_table.saopaulo-public",
            "aws_subnet.saopaulo-public-subnet-1c",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "saopaulo-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03faeee5b9b7e9140",
            "route_table_id": "rtb-02cc487fcc0dcebd9",
            "subnet_id": "subnet-021ecec6d9b5aec22"
          },
          "dependencies": [
            "aws_eip.saopaulo-nat",
            "aws_internet_gateway.saopaulo-igw",
            "aws_nat_gateway.saopaulo-nat",
            "aws_route_table.saopaulo-private",
            "aws_subnet.saopaulo-private-subnet-1a",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "saopaulo-private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f639be7041f28c31",
            "route_table_id": "rtb-02cc487fcc0dcebd9",
            "subnet_id": "subnet-0eb535c51019a6c1b"
          },
          "dependencies": [
            "aws_eip.saopaulo-nat",
            "aws_internet_gateway.saopaulo-igw",
            "aws_nat_gateway.saopaulo-nat",
            "aws_route_table.saopaulo-private",
            "aws_subnet.saopaulo-private-subnet-1c",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "saopaulo-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f687f2726970d3d",
            "route_table_id": "rtb-012cbb169f633f209",
            "subnet_id": "subnet-0b55cd8c609ad7066"
          },
          "dependencies": [
            "aws_internet_gateway.saopaulo-igw",
            "aws_route_table.saopaulo-public",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0373c558075572d5b",
            "route_table_id": "rtb-0d44ca093bb1b0e4f",
            "subnet_id": "subnet-00a42670d11042672"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_route_table.tokyo-private",
            "aws_subnet.tokyo-private-subnet-1a",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-private-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d96d0054678187c",
            "route_table_id": "rtb-0d44ca093bb1b0e4f",
            "subnet_id": "subnet-0d5fe9adb140668bb"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_route_table.tokyo-private",
            "aws_subnet.tokyo-private-subnet-1d",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e09cff1a0f1b36b",
            "route_table_id": "rtb-05b1edb8c1f994dd2",
            "subnet_id": "subnet-0c3f6b255010cca3a"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_internet_gateway.tokyo-igw",
            "aws_route_table.tokyo-public",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-public-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a2b4198d416a238",
            "route_table_id": "rtb-05b1edb8c1f994dd2",
            "subnet_id": "subnet-04c8f18fb540bebbb"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_internet_gateway.tokyo-igw",
            "aws_route_table.tokyo-public",
            "aws_subnet.tokyo-public-subnet-1d",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyotest-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4c178f9cbfaf811",
            "route_table_id": "rtb-00467a4d27247bffc",
            "subnet_id": "subnet-01383d7ff6ec15b82"
          },
          "dependencies": [
            "aws_eip.tokyotest-nat",
            "aws_internet_gateway.tokyotest-igw",
            "aws_nat_gateway.tokyotest-nat",
            "aws_route_table.tokyotest-private",
            "aws_subnet.tokyotest-private-subnet-1d",
            "aws_subnet.tokyotest-public-subnet-1d",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyotest-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001acfb5e65265f3c",
            "route_table_id": "rtb-0763d69c5170a3c3a",
            "subnet_id": "subnet-017467ef137ddba0b"
          },
          "dependencies": [
            "aws_internet_gateway.tokyotest-igw",
            "aws_route_table.tokyotest-public",
            "aws_subnet.tokyotest-public-subnet-1d",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "australia-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:security-group/sg-04e3ba8b10a97e402",
            "description": "australia-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e3ba8b10a97e402",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "australia-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "495599735872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "australia-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "australia-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-077b1fc5de17d127f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.australia-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "australia-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:security-group/sg-03c9e4bc86f7b1833",
            "description": "australia-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c9e4bc86f7b1833",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "australia-SG02-LB01",
            "name_prefix": "",
            "owner_id": "495599735872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "australia-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "australia-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-077b1fc5de17d127f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "california-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:security-group/sg-0e8a9de62a03518e0",
            "description": "california-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8a9de62a03518e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "california-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "495599735872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "california-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "california-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d5396d623a34cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.california-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "california-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:security-group/sg-071a9e02f84295278",
            "description": "california-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071a9e02f84295278",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "california-SG02-LB01",
            "name_prefix": "",
            "owner_id": "495599735872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "california-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "california-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d5396d623a34cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hongkong-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:security-group/sg-07fc45e6cdff7fe04",
            "description": "hongkong-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07fc45e6cdff7fe04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hongkong-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "495599735872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hongkong-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "hongkong-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcd95b3b199a6881"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hongkong-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:security-group/sg-00f9caa995810019f",
            "description": "hongkong-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f9caa995810019f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hongkong-SG02-LB01",
            "name_prefix": "",
            "owner_id": "495599735872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hongkong-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "hongkong-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcd95b3b199a6881"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "london-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:security-group/sg-09da8daf5c4fc2099",
            "description": "london-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09da8daf5c4fc2099",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "london-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "495599735872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "london-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "london-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c4bb68363a5ef8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.london-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "london-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:security-group/sg-0de31ecf93121cdad",
            "description": "london-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de31ecf93121cdad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "london-SG02-LB01",
            "name_prefix": "",
            "owner_id": "495599735872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "london-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "london-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c4bb68363a5ef8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "newyork-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:security-group/sg-0388db5e0687172f0",
            "description": "newyork-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0388db5e0687172f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "newyork-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "495599735872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "newyork-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "newyork-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-043018aec8e4118bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "newyork-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:security-group/sg-04688c1b87f228529",
            "description": "newyork-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04688c1b87f228529",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "newyork-SG02-LB01",
            "name_prefix": "",
            "owner_id": "495599735872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "newyork-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "newyork-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-043018aec8e4118bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "saopaulo-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:security-group/sg-036c4354fb713065a",
            "description": "saopaulo-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036c4354fb713065a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "saopaulo-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "495599735872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sao-paulo-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "sao-paulo-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bbc0a1d95f3b24d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "saopaulo-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:security-group/sg-0d398289764445259",
            "description": "saopaulo-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d398289764445259",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "saopaulo-SG02-LB01",
            "name_prefix": "",
            "owner_id": "495599735872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sao-paulo-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "sao-paulo-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bbc0a1d95f3b24d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyo-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:security-group/sg-0ede827c671612e51",
            "description": "tokyo-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ede827c671612e51",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "495599735872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "tokyo-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c8baf5464ff9898"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyo-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:security-group/sg-0ef06fbe26e130c5a",
            "description": "tokyo-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef06fbe26e130c5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-SG02-LB01",
            "name_prefix": "",
            "owner_id": "495599735872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "tokyo-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c8baf5464ff9898"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyotest-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:security-group/sg-057ef24f3f4701cb8",
            "description": "tokyo-test-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057ef24f3f4701cb8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-test-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "495599735872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyotest-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "tokyotest-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0962912c1c97e3d2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyotest-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:security-group/sg-08327abe7083a8254",
            "description": "tokyo-test-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08327abe7083a8254",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-test-SG02-LB01",
            "name_prefix": "",
            "owner_id": "495599735872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyotest-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "tokyotest-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0962912c1c97e3d2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-private-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:subnet/subnet-0de5be4adad623ae1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.22.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de5be4adad623ae1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Australia-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-077b1fc5de17d127f"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-private-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:subnet/subnet-0fa9615798c03882a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.22.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa9615798c03882a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Australia-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-077b1fc5de17d127f"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-public-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:subnet/subnet-0eadf406941c5ce96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.22.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eadf406941c5ce96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Australia-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-077b1fc5de17d127f"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-public-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:subnet/subnet-0bcfd3310b2c6df89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.22.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcfd3310b2c6df89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Australia-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-077b1fc5de17d127f"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:subnet/subnet-0316ca7e59048141c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.24.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0316ca7e59048141c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Califonia-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-091d5396d623a34cb"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-private-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:subnet/subnet-0fe5804992befec55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.24.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe5804992befec55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-091d5396d623a34cb"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:subnet/subnet-030718b576c868742",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.24.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030718b576c868742",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Califonia-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-091d5396d623a34cb"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-public-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:subnet/subnet-0be73428c9677c688",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.24.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be73428c9677c688",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Califonia-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-091d5396d623a34cb"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hongkong-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:subnet/subnet-003784450a3aaf615",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "172.23.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003784450a3aaf615",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0fcd95b3b199a6881"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hongkong-private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:subnet/subnet-018ae7b26705e415a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1b",
            "availability_zone_id": "ape1-az2",
            "cidr_block": "172.23.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018ae7b26705e415a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0fcd95b3b199a6881"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hongkong-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:subnet/subnet-00ec8807a70fa9b45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "172.23.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ec8807a70fa9b45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0fcd95b3b199a6881"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hongkong-public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:subnet/subnet-0fc5b356ac5f0bb77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1b",
            "availability_zone_id": "ape1-az2",
            "cidr_block": "172.23.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc5b356ac5f0bb77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0fcd95b3b199a6881"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-private-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:subnet/subnet-0091e4a2e01588c37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0091e4a2e01588c37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-London-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-London-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-02c4bb68363a5ef8c"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-private-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:subnet/subnet-0ad1234bf5dd72289",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad1234bf5dd72289",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-London-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-London-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-02c4bb68363a5ef8c"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-public-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:subnet/subnet-0188e77a89b983b4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0188e77a89b983b4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-London-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-London-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-02c4bb68363a5ef8c"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-public-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:subnet/subnet-0e80daa78bf7f2752",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e80daa78bf7f2752",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-02c4bb68363a5ef8c"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "newyork-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:subnet/subnet-005266d8e182a6207",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.19.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005266d8e182a6207",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-043018aec8e4118bc"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "newyork-private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:subnet/subnet-053cc63fe381e1bca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.19.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053cc63fe381e1bca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-043018aec8e4118bc"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "newyork-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:subnet/subnet-010fe3f45b0a0a29f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.19.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010fe3f45b0a0a29f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-043018aec8e4118bc"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "newyork-public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:subnet/subnet-047ae008fdb591faf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.19.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047ae008fdb591faf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-043018aec8e4118bc"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "saopaulo-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:subnet/subnet-021ecec6d9b5aec22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "172.21.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021ecec6d9b5aec22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Saup-Paulo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-02bbc0a1d95f3b24d"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "saopaulo-private-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:subnet/subnet-0eb535c51019a6c1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "172.21.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb535c51019a6c1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Saup-Paulo-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-02bbc0a1d95f3b24d"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "saopaulo-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:subnet/subnet-0b55cd8c609ad7066",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "172.21.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b55cd8c609ad7066",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Saup-Paulo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-02bbc0a1d95f3b24d"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "saopaulo-public-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:subnet/subnet-07a7dd6a6528b9205",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "172.21.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a7dd6a6528b9205",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Saup-Paulo-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-02bbc0a1d95f3b24d"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:subnet/subnet-00a42670d11042672",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.18.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a42670d11042672",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-09c8baf5464ff9898"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-private-subnet-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:subnet/subnet-0d5fe9adb140668bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.18.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5fe9adb140668bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-09c8baf5464ff9898"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:subnet/subnet-0c3f6b255010cca3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.18.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3f6b255010cca3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-09c8baf5464ff9898"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-public-subnet-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:subnet/subnet-04c8f18fb540bebbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.18.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c8f18fb540bebbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-09c8baf5464ff9898"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyotest-private-subnet-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:subnet/subnet-01383d7ff6ec15b82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.26.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01383d7ff6ec15b82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TEST-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TEST-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0962912c1c97e3d2d"
          },
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyotest-public-subnet-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:subnet/subnet-017467ef137ddba0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.26.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017467ef137ddba0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TEST-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TEST-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0962912c1c97e3d2d"
          },
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "australia-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:vpc/vpc-077b1fc5de17d127f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.22.0.0/16",
            "default_network_acl_id": "acl-0380e3f38ea1a3c98",
            "default_route_table_id": "rtb-0f042ef52e5aeefea",
            "default_security_group_id": "sg-04250db70fcdc3a18",
            "dhcp_options_id": "dopt-02760a403b66894c2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-077b1fc5de17d127f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f042ef52e5aeefea",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Australia-vpc"
            },
            "tags_all": {
              "Name": "PROD-Australia-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "california-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:vpc/vpc-091d5396d623a34cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.24.0.0/16",
            "default_network_acl_id": "acl-0dd4fac08320a534c",
            "default_route_table_id": "rtb-066e6251d984f31b7",
            "default_security_group_id": "sg-06749f8af9b111fd6",
            "dhcp_options_id": "dopt-07e622ac9bd3f5e40",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-091d5396d623a34cb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066e6251d984f31b7",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Califonia-vpc"
            },
            "tags_all": {
              "Name": "PROD-Califonia-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hongkong-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:vpc/vpc-0fcd95b3b199a6881",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.23.0.0/16",
            "default_network_acl_id": "acl-01b5cabe696288052",
            "default_route_table_id": "rtb-039b0d6c18e77f7ed",
            "default_security_group_id": "sg-033ca00a4b2a5baf2",
            "dhcp_options_id": "dopt-0f85db491eeb22e8e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fcd95b3b199a6881",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039b0d6c18e77f7ed",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Hongkong-vpc"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "london-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:vpc/vpc-02c4bb68363a5ef8c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0b3e05fb989890e54",
            "default_route_table_id": "rtb-0cfb3caca03224635",
            "default_security_group_id": "sg-01fa3528a361b0e10",
            "dhcp_options_id": "dopt-0b7e43e752b1abf33",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c4bb68363a5ef8c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cfb3caca03224635",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-London-vpc"
            },
            "tags_all": {
              "Name": "PROD-London-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "newyork-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:vpc/vpc-043018aec8e4118bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.19.0.0/16",
            "default_network_acl_id": "acl-0b64c8736692bf4a5",
            "default_route_table_id": "rtb-00b407aef322b9218",
            "default_security_group_id": "sg-08bb65230047be0a4",
            "dhcp_options_id": "dopt-068cedb6b46f1ecf5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-043018aec8e4118bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b407aef322b9218",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-New York-vpc"
            },
            "tags_all": {
              "Name": "PROD-New York-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "saopaulo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:vpc/vpc-02bbc0a1d95f3b24d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-072c65e5e89673b64",
            "default_route_table_id": "rtb-084917f1941a37ff9",
            "default_security_group_id": "sg-0b4900fd62dd5c108",
            "dhcp_options_id": "dopt-0db4a8e8302520b79",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02bbc0a1d95f3b24d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084917f1941a37ff9",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Saup-Paulo-vpc"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:vpc/vpc-09c8baf5464ff9898",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.18.0.0/16",
            "default_network_acl_id": "acl-073ae10629aa174ee",
            "default_route_table_id": "rtb-0912e0e418e656685",
            "default_security_group_id": "sg-08c131b6ce34a0f88",
            "dhcp_options_id": "dopt-0a6b10ece991cf8de",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c8baf5464ff9898",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0912e0e418e656685",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Tokyo-vpc"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyotest-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:vpc/vpc-0962912c1c97e3d2d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.26.0.0/16",
            "default_network_acl_id": "acl-0c6b494322b75a25c",
            "default_route_table_id": "rtb-042ca96a5baf71cfc",
            "default_security_group_id": "sg-07dce5e414da5ae76",
            "dhcp_options_id": "dopt-0a6b10ece991cf8de",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0962912c1c97e3d2d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042ca96a5baf71cfc",
            "owner_id": "495599735872",
            "tags": {
              "Name": "TEST-Tokyo-vpc"
            },
            "tags_all": {
              "Name": "TEST-Tokyo-vpc"
            }
          }
        }
      ]
    }
  ]
}